# langchain-box-loan-demo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sample.env
data/Applications/: QUICK_REFERENCE_jennifer_lopez.md  QUICK_REFERENCE_marcus_johnson.md  QUICK_REFERENCE_sarah_chen.md
data/Demo Goal Samples/: QUICK_REFERENCE_david_martinez.md  ULTIMATE_SUMMARY.md
data/Policies/: Auto Loan Underwriting Standards.md  Exception Approval Authority.md  Vehicle Valuation Guidelines.md
docs/: LOGGING.md  box-ai-agents-toolkit.md  deep-agents-framework.md  utilities.md
src/: app_config.py  config.py  demo_loan.py  demo_research.py  demo_upload_sample_data.py  main.py  test_loan_orchestrator.py  test_logging.py  upload_sample_data.py
src/agents/: README.md  loan_orchestrator.py  orchestrator.py  orchestrator_deprecated.py  orchestrator_research.py
src/agents/loan_underwriting/: __init__.py  loan_prompts.py  loan_tools.py
src/agents/research_agent/: __init__.py  research_prompts.py  research_tools.py
src/utils/: box_api_auth.py  box_api_generic.py  box_auth.py  display_messages.py  logging_config.py
tests/: test_logging.py  test_utils_box_auth.py
