[project]
name = "langchain-box-loan-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "box-ai-agents-toolkit>=0.1.5",
    "colorlog>=6.9.0",
    "deepagents>=0.3.0",
    "ipython>=9.8.0",
    "langchain-anthropic>=1.2.0",
    "langgraph>=1.0.4",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = [".", "src", "tests"]
